--- a/ASPNet/RazorPagesMovie/RazorPagesMovie.csproj
+++ b/ASPNet/RazorPagesMovie/RazorPagesMovie.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DependencyInjectionSample\DependencyInjectionSample.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services" />
+  </ItemGroup>
+
 </Project>
